--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,9 @@
 body {
-  margin-top: 30px;
   font-family: "Advent Pro";
-  background: #faf6ee;
+  background-color: #faf6ee;
+}
+.navbar-toggler-icon {
+  color: black;
 }
 .main {
   text-align: center;
@@ -10,11 +12,29 @@ body {
   text-align: center;
   font-size: 40px;
 }
+a {
+  color: black;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+  color: rgb(121, 12, 194);
+}
+
 i {
   color: black;
 }
+i:hover {
+  color: rgb(121, 12, 194);
+  font-size: 80px;
+}
 h1 {
   font-size: 45px;
+  text-align: center;
+}
+h4 {
+  font-size: 25px;
+  text-align: center;
 }
 hr {
   display: block;
@@ -24,4 +44,23 @@ hr {
 .btn {
   font-size: 25px;
   border-radius: 20px;
+}
+
+img {
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px 5px rgb(227, 225, 225);
+}
+
+@media (max-width: 400px) {
+  .homepage {
+    text-align: center;
+    padding: 10px 10px;
+    margin: 10px 10px;
+  }
+  hr {
+    width: 320px;
+  }
+  h2 {
+    font-size: 15px;
+  }
 }
