--- a/src/style.css
+++ b/src/style.css
@@ -30,9 +30,15 @@ h1 {
   font-size: 45px;
   text-align: center;
 }
+h2 {
+  font-size: 25px;
+}
 h4 {
   font-size: 25px;
   text-align: center;
+}
+p {
+  font-size: 20px;
 }
 hr {
   display: block;
@@ -50,6 +56,8 @@ img {
 }
 .button {
   text-align: center;
+ 
+} ;
 }
 
 @media (max-width: 400px) {
