--- a/src/style.css
+++ b/src/style.css
@@ -61,7 +61,7 @@ p {
   padding-right: 150px;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 800px) {
   .homepage {
     text-align: center;
     padding: 10px 10px;
@@ -72,5 +72,8 @@ p {
   }
   h2 {
     font-size: 15px;
+  }
+  p {
+    padding: 10px;
   }
 }
