--- a/src/style.css
+++ b/src/style.css
@@ -68,6 +68,15 @@ p {
   margin: auto;
   margin-bottom: 50px;
 }
+.second-page {
+  width: 900px;
+  display: block;
+  margin: auto;
+  margin-bottom: 50px;
+}
+.paragraf {
+  font-size: 30px;
+}
 .navbar {
   font-size: 25px;
 }
@@ -77,6 +86,12 @@ p {
 .navbar-toggler {
   border: 1px solid black;
 }
+.photo {
+  width: 300px;
+  display: block;
+  margin: auto;
+  margin-bottom: 80px;
+}
 @media (max-width: 800px) {
   .homepage {
     text-align: center;
@@ -84,7 +99,7 @@ p {
     margin: 10px 10px;
   }
   hr {
-    width: 300px;
+    width: 320px;
   }
   h2 {
     font-size: 15px;
@@ -93,12 +108,18 @@ p {
   p {
     padding: 10px;
   }
+
+  .main-page {
+    display: none;
+  }
+  .second-page {
+    display: none;
+  }
+}
+@media (max-width: 1000px) {
   .img-fluid {
     display: block;
     margin: auto;
     width: 320px;
-  }
-  .main-page {
-    display: none;
   }
 }
