--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ h4 {
   text-align: center;
 }
 p {
-  font-size: 20px;
+  font-size: 30px;
 }
 hr {
   display: block;
@@ -63,13 +63,13 @@ p {
   padding-right: 150px;
 }
 .main-page {
-  width: 600px;
+  width: 650px;
   display: block;
   margin: auto;
   margin-bottom: 50px;
 }
 .second-page {
-  width: 900px;
+  width: 800px;
   display: block;
   margin: auto;
   margin-bottom: 50px;
@@ -91,6 +91,10 @@ p {
   display: block;
   margin: auto;
   margin-bottom: 80px;
+}
+.text-center {
+  margin-top: 80px;
+  font-size: 35px;
 }
 @media (max-width: 800px) {
   .homepage {
