--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,17 @@ h4 {
   font-size: 25px;
   text-align: center;
 }
+h5 {
+  font-size: 60px;
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 60px;
+}
+footer {
+  margin-top: 100px;
+  font-size: 30px;
+  text-align: center;
+}
 p {
   font-size: 30px;
 }
