--- a/src/style.css
+++ b/src/style.css
@@ -63,11 +63,12 @@ hr {
   border-radius: 20px;
 }
 
-img {
+.img-fluid {
   width: 500px;
-  border-radius: 15px;
-  box-shadow: 5px 5px 5px 5px rgb(227, 225, 225);
+  border-radius: 5px;
+  box-shadow: 2px 5px 5px 5px rgb(226, 223, 223);
 }
+
 .button {
   text-align: center;
 }
@@ -81,7 +82,7 @@ p {
   margin-bottom: 50px;
 }
 .second-page {
-  width: 400px;
+  width: 500px;
   display: block;
   margin: auto;
   margin-bottom: 50px;
@@ -121,6 +122,7 @@ p {
   right: 50px;
   bottom: 50px;
 }
+
 @media (max-width: 800px) {
   .homepage {
     text-align: center;
